Fix broken layout with zoomed in screenshots on chrome

--- a/museum_site/static/css/grid.css
+++ b/museum_site/static/css/grid.css
@@ -885,7 +885,6 @@ form .field .genre-checklist
 {
     /* Used when zooming in on screenshots */
     grid-template-columns: auto auto auto auto;
-    grid-template-rows:100% auto auto auto auto;
 
     grid-template-areas:
     "screenshot screenshot screenshot screenshot"
